[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/UI/tab.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/C64_Pro-STYLE.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="character_tab" type="Control"]
unique_name_in_owner = true
margin_left = 246.0
margin_right = 310.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 32 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 32.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 32 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 63.0
margin_bottom = 31.0
rect_min_size = Vector2( 62, 30 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 6.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "char"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 62.0
margin_bottom = 30.0
mouse_filter = 1

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
